# chiprust-emu-gui

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  draw_thread.rs  input.rs  lib.rs  main.rs
