[package]
name = "chiprust-emu-gui"
version = "0.1.0"
authors = ["Maxim Kuznetsov <maximxlssoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
getrandom = "0.2.3"
chiprust-emu = { version = "0.2.0", path = "../chiprust-emu" }
rodio = { version = "0.13.1", optional = true }
crossterm = "0.19.0"
clap = "2.33.3"
bimap = "0.6.1"
lazy_static = "1.4.0"
spin_sleep = "1.0.0"
parking_lot = "0.11.1"
winit = "0.25.0"
pixels = "0.3.0"
wasm-bindgen = "0.2.69"

[features]
sound = ["rodio"]
