[package]
name = "chiprust-emu-gui"
description = "Experimental GUI for chiprust-emu"
repository = "https://github.com/maximxlss/chiprust-emu-gui"
version = "0.1.0"
authors = ["Maxim Kuznetsov <maximxlssoff@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
chiprust-emu = "0.2.1"
rodio = { version = "0.13.1", optional = true }
clap = "2.33.3"
bimap = "0.6.1"
lazy_static = "1.4.0"
spin_sleep = "1.0.0"
parking_lot = "0.11.1"
winit = "0.25.0"
pixels = "0.3.0"

[features]
sound = ["rodio"]
